--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ pep8-naming = "*"
 flake8-bugbear = "*"
 flake8-builtins = "*"
 flakeheaven = "<3"
+pytest-mock = "^3.6.1"
 
 [tool.black]
 target-version = ["py38"]
