--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,11 +86,14 @@ warn_unused_ignores = true
 [tool.ruff]
 target-version = "py38"
 line-length = 99
-select = ["E", "B", "F", "C", "W", "N", "Q", "UP"]
+select = ["A", "B", "C", "E", "F", "N", "Q", "W", "UP"]
 ignore = ["E501", "F401", "B904", "B008"]
 format = "grouped"
 exclude = ["*.md"]
 show-source = true
+
+[tool.ruff.mccabe]
+max-complexity = 18
 
 [tool.pytest.ini_options]
 addopts = "-vv -x --lf"
